--- a/src/pages/Blog/Blog.css
+++ b/src/pages/Blog/Blog.css
@@ -45,4 +45,8 @@
   .postList {
     padding-left: 0px;
   }
+
+  .blogPage {
+    margin-top: calc($mobileNavHeight - 1px);
+  }
 }
